--- a/Draw/Controller/Shop/ShoppingCell.xib
+++ b/Draw/Controller/Shop/ShoppingCell.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11D50b</string>
+		<string key="IBDocument.SystemVersion">11E53</string>
 		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.32</string>
-		<string key="IBDocument.HIToolboxVersion">568.00</string>
+		<string key="IBDocument.AppKitVersion">1138.47</string>
+		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">1181</string>
@@ -130,7 +130,7 @@
 							<object class="IBUILabel" id="8811069">
 								<reference key="NSNextResponder" ref="16295551"/>
 								<int key="NSvFlags">301</int>
-								<string key="NSFrame">{{60, 18}, {47, 37}}</string>
+								<string key="NSFrame">{{60, 18}, {63, 37}}</string>
 								<reference key="NSSuperview" ref="16295551"/>
 								<reference key="NSNextKeyView" ref="372669938"/>
 								<bool key="IBUIOpaque">NO</bool>
