--- a/Draw/Controller/Feed/CommentHeaderView.xib
+++ b/Draw/Controller/Feed/CommentHeaderView.xib
@@ -38,13 +38,14 @@
 					<object class="IBUILabel" id="858643104">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{5, 0}, {295, 45}}</string>
+						<string key="NSFrame">{{0, 2}, {295, 45}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
+						<int key="IBUITag">100</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">comment header</string>
